Tue Jul 28 14:17:05 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * 14a_README:

          Removed this file.  TAO 1.4a is no longer supported.

Mon Jul 27 23:20:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:

          Updated release notes with instance operation changes.

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:
        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DdsDcpsPublication.idl:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:

          Updated instance operations to comply with formal/07-01-01.

        * DevGuideExamples/DCPS/Messenger/Writer.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Writer.cpp:
        * examples/DCPS/IntroductionToOpenDDS/publisher.cpp:
        * examples/DCPS/Messenger_IOGR_Imr/Writer.cpp:
        * examples/DCPS/Messenger_Imr/Writer.cpp:
        * performance-tests/DCPS/InfoRepo_population/Writer.cpp:
        * performance-tests/DCPS/McastListenerTest/Writer.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:
        * performance-tests/DCPS/SimpleLatency/PubListener.cpp:
        * performance-tests/DCPS/SimpleLatency/SubListener.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
        * performance-tests/DCPS/TCPProfilingTest/Writer.cpp:
        * performance-tests/DCPS/TransportLatency/Writer.cpp:
        * performance-tests/DCPS/UDPListenerTest/Writer.cpp:
        * performance-tests/DCPS/UDPNoKeyTest/Writer.cpp:
        * tests/DCPS/BuiltInTopic/common.cpp:
        * tests/DCPS/BuiltInTopicTest/Writer.cpp:
        * tests/DCPS/CompatibilityTest/Writer.cpp:
        * tests/DCPS/CorbaSeq/Writer.cpp:
        * tests/DCPS/Deadline/Writer.cpp:
        * tests/DCPS/FooTest2/main.cpp:
        * tests/DCPS/FooTest3/Writer.cpp: